--- a/visionSamples/ocr-codelab/ocr-reader-complete/app/build.gradle
+++ b/visionSamples/ocr-codelab/ocr-reader-complete/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.google.android.gms.samples.vision.barcodereader"
@@ -20,8 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-	compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.google.android.gms:play-services-vision:9.4.0+'
-    compile 'com.android.support:design:24.2.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:24.2.0'
+    implementation 'com.google.android.gms:play-services-vision:11.0.4'
+    implementation 'com.android.support:design:24.2.0'
 }
